# student-report-generator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
assignment/: models.py  serializers.py  tasks.py  urls.py  views.py
assignment/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
